--- a/src/Infrastructure/XrayUi.Infrastructure.Xray/XrayUi.Infrastructure.Xray.csproj
+++ b/src/Infrastructure/XrayUi.Infrastructure.Xray/XrayUi.Infrastructure.Xray.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Itmo.Dev.Platform.Common" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
     <PackageReference Include="Newtonsoft.Json" />
   </ItemGroup>
 </Project>
